# chaty

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0002_core_domain.py  0004_extracted_document_metadata.py  0005_indexing_chunk_metadata.py  0006_source_active_incremental.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  exception_handlers.py  router.py
backend/app/api/routes/: auth.py  chat.py  health.py  public_routes.py
backend/app/api/routes/admin/: crawl_jobs.py  index_jobs.py  retrieval.py  sources.py  tenants.py
backend/app/auth/: rbac.py  tokens.py
backend/app/chat/: __init__.py  answer_service.py  context_formatter.py  openai_responses.py  prompt_builder.py
backend/app/core/: config.py  lifespan.py  logging.py  rate_limit.py  redis_client.py  settings.py
backend/app/crawler/: __init__.py  engine.py  fetch.py  normalization.py  parse.py  robots.py  types.py
backend/app/db/: __init__.py  session.py
backend/app/extractors/: __init__.py  clutter.py  markdown_headings.py  pdf_protocol.py  trafilatura_extractor.py
backend/app/indexer/: __init__.py
backend/app/indexing/: __init__.py
backend/app/middleware/: request_context.py
backend/app/models/: __init__.py  crawl_config.py  enums.py  extracted.py  mixins.py  source.py  tenant.py
backend/app/repositories/: admin_user.py  audit_log.py  chat.py  crawl_config.py  crawl_job.py  extracted_document.py  index_job.py  source.py  tenant.py
backend/app/retrieval/: __init__.py  config.py  hybrid_merge.py  retrieval_service.py  types.py
backend/app/schemas/: auth.py  chat_query.py  common.py  crawl_job.py  extraction.py  incremental.py  public_tenant.py  tenant.py
backend/app/services/: audit_service.py  chat_query_service.py  crawl_db_sink.py  crawl_execution_service.py  crawl_job_service.py  health_service.py  html_extraction_service.py  incremental_sync_service.py  index_job_admin_service.py  pdf_extraction_service.py  post_crawl_extraction.py  source_browse_service.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: __init__.py  crawl.py  extract.py  extract_pdf.py  index.py
backend/tests/: conftest.py  test_health.py
backend/tests/fixtures/: factories.py
backend/tests/integration/: test_admin_tenants.py  test_incremental_admin.py  test_indexing.py
backend/tests/unit/: test_settings.py
backend/tests/unit/chat/: test_context_and_citations.py
backend/tests/unit/crawler/: test_normalization.py  test_queue.py  test_rules_and_discovery.py
backend/tests/unit/extractors/: test_pymupdf_extractor.py  test_trafilatura_extractor.py
backend/tests/unit/incremental/: test_crawl_stats_touched.py
backend/tests/unit/indexing/: test_chunker.py  test_indexing_logic.py  test_indexing_service.py
backend/tests/unit/retrieval/: test_hybrid_merge.py  test_retrieval_service.py  test_retrieval_tenant_isolation.py
backend/tests/unit/services/: test_incremental_update_service.py
docs/: API.md  ARCHITECTURE.md  CRAWL_AND_INDEX.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/lib/: api.ts  (+4 more)
mini-app/: .env.example  README.md  docker-compose.yml
miniapp-frontend/: conversation.txt
scripts/: dev.ps1  dev.sh
(+200 files in other folders)
